base/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: ghost:5.2.4-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 2368
        volumeMounts:
          - mountPath: /var/lib/ghost/content
            name: content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
